Review fixes. Introduced ServiceProviderRegistry.java Validating helidon prefixed options
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>